Checking if problem comes from where the java option is passed.