@@ -77,8 +77,6 @@ val testSettings = Seq(
     "-Xms512M",
     "-Xmx1G"
   ),
-  Test / javaOptions += "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-  Test / javaOptions += "--add-exports=java.base/sun.util.calendar=ALL-UNNAMED", 
   Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a"),
   
   libraryDependencies ++= Dependencies.testDeps
